--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -295,7 +295,7 @@ header, footer {
 .map-container {
     flex: 1;
     min-width: 300px;
-    max-width: 500px;
+    max-width: auto;
     padding: 1rem;
 }
 
