--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -34,7 +34,7 @@ header, footer {
 }
 
 .header {
-    border-bottom: 2px solid #d1d5db; 
+    border-bottom: 0.125rem solid #d1d5db; 
     margin: 0;
     padding: 0;
 }
@@ -78,7 +78,7 @@ header, footer {
 
 /* Estilos del footer */
 .footer {
-    border-top: 2px solid #d1d5db;
+    border-top: 0.125rem solid #d1d5db;
     padding: 1rem 2rem; 
     position: relative;
     width: 100%; 
@@ -92,7 +92,7 @@ header, footer {
     padding: 1rem; 
 }
 
-@media (min-width: 768px) {
+@media (min-width: 48rem) {
     .footer-content {
         grid-template-columns: repeat(3, 1fr); 
     }
@@ -124,7 +124,7 @@ header, footer {
     color: white; 
     padding: 1rem; 
     border-radius: 9999px; 
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+    box-shadow: 0 0.25rem 0.375rem rgba(0, 0, 0, 0.1); 
     display: flex; 
     align-items: center; 
     justify-content: center; 
@@ -135,7 +135,7 @@ header, footer {
     color: white; 
     padding: 1rem; 
     border-radius: 9999px; 
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+    box-shadow: 0 0.25rem 0.375rem rgba(0, 0, 0, 0.1); 
     display: flex; 
     align-items: center; 
     justify-content: center; 
@@ -154,8 +154,8 @@ header, footer {
     width: 16rem; 
     background-color: #f3f4f6; 
     padding: 1.5rem; 
-    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1); 
-    border-right: 2px solid #d1d5db;
+    box-shadow: 0.125rem 0 0.3125rem rgba(0, 0, 0, 0.1); 
+    border-right: 0.125rem solid #d1d5db;
 }
 
 .dashboard-content {
@@ -194,7 +194,7 @@ header, footer {
     background-color: white;
     padding: 1.5rem; 
     border-radius: 0.5rem; 
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+    box-shadow: 0 0.25rem 0.375rem rgba(0, 0, 0, 0.1); 
     text-align: center; 
 }
 
@@ -231,7 +231,7 @@ header, footer {
 /* Carrito de compras */
 .titulo-carrito {
     margin-top: 1.5rem;
-    font-size: 1.500rem; 
+    font-size: 1.5rem; 
     font-weight: bold; 
     margin-bottom: 1.5rem; 
 }
@@ -240,7 +240,7 @@ header, footer {
     background-color: white; 
     padding: 1.5rem; 
     border-radius: 0.5rem; 
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+    box-shadow: 0 0.25rem 0.375rem rgba(0, 0, 0, 0.1); 
 }
 
 .mensaje-vacio {
@@ -254,7 +254,7 @@ header, footer {
 }
 
 .producto-item {
-    border-bottom: 1px solid #e5e7eb; 
+    border-bottom: 0.0625rem solid #e5e7eb; 
     padding: 0.5rem 0; 
     display: flex; 
     justify-content: space-between; 
@@ -279,128 +279,17 @@ header, footer {
     background-color: #388e3c;
 }
 
-/* Contacto */
-.container-contacto {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
-}
-
-.contacto-content {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-}
-
-.map-container {
-    flex: 1;
-    min-width: 300px;
-    max-width: auto;
-    padding: 1rem;
-}
-
-.map-container iframe {
-    border-radius: 0.5rem;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-.cuadro-contacto {
-    flex: 1;
-    min-width: 300px;
-    max-width: 500px;
-    border: 1px solid #4A5568;
-    border-radius: 0.5rem;
-    padding: 20px;
-    background-color: #ffffff;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-.card-body-contacto {
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-}
-
-.form-control-contacto {
-    border: 0.175rem solid #4A5568;
-    border-radius: 0.5rem;
-    padding: 0.5rem;
-    width: 100%;
-    box-sizing: border-box;
-}
-
-.form-control-contacto:focus {
-    border-color: #2D3748;
-    outline: none;
-}
-
-.form-control-contacto.textarea {
-    min-height: 150px;
-    resize: vertical;
-}
-
-.cajas-contacto {
-    margin-bottom: 1rem;
-    width: 100%;
-}
-
-.btn-enviar-mensaje-div {
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
-}
-
-.btn-enviar-mensaje-1 {
-    background-color: #1e3a8a;
-    color: white;
-    padding: 0.5rem 1rem;
-    border-radius: 0.5rem;
-    border: none;
-    cursor: pointer;
-    transition: background-color 0.3s;
-    width: 100%;
-    text-align: center;
-}
-
-.btn-enviar-mensaje-1:hover {
-    background-color: #1e40af;
-}
-
-.invalid-feedback {
-    color: #ef4444;
-    font-size: 0.875rem;
-    margin-top: 0.25rem;
-}
-
-.alert-success {
-    background-color: #d4edda;
-    color: #155724;
-    padding: 1rem;
-    border-radius: 0.5rem;
-    margin-bottom: 1rem;
-    text-align: center;
-}
-
-.alert-error {
-    background-color: #f8d7da;
-    color: #721c24;
-    padding: 1rem;
-    border-radius: 0.5rem;
-    margin-bottom: 1rem;
-    text-align: center;
-}
-
 /* Mapa */
 #map {
-    height: 400px;
+    height: 25rem;
     width: 100%;
     border-radius: 0.5rem;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0.25rem 0.375rem rgba(0, 0, 0, 0.1);
 }
 
 /* Inventario */
 .container-inventario {
-    max-width: 800px;
+    max-width: 50rem;
     margin: 0 auto;
     align-items: center;
 }
@@ -418,15 +307,15 @@ header, footer {
 table {
     width: 100%;
     border-collapse: collapse;
-    margin-top: 20px;
+    margin-top: 1.25rem;
 }
 
 table, th, td {
-    border: 2px solid #4A5568;
+    border: 0.125rem solid #4A5568;
 }
 
 th, td {
-    padding: 10px;
+    padding: 0.625rem;
     text-align: left;
 }
 
@@ -440,72 +329,72 @@ th {
 }
 
 .btn-eliminar-tabla {
-    width: 100%;
+    width: auto;
     background-color: #eb6565;
 }
 
 .btn-agregar {
-    margin-top: 20px;
+    margin-top: 1.25rem;
     width: 100%;
     border-collapse: collapse;
-    border: 2px solid #2D3748;
+    border: 0.125rem solid #2D3748;
     border-color: #2D3748;
     background-color: #90EE90;
-    padding: 15px;
-    font-size: 20px;
+    padding: 0.9375rem;
+    font-size: 1.25rem;
 }
 
 dialog {
-    border: 2px solid #2D3748;
-    border-radius: 8px;
-    padding: 20px;
-    width: 400px;
+    border: 0.125rem solid #2D3748;
+    border-radius: 0.5rem;
+    padding: 1.25rem;
+    width: 25rem;
 }
 
 #mensaje-eliminar {
     text-align: center;
-    margin: 20px 0;
+    margin: 1.25rem 0;
 }
 
 .header-modal {
-    margin-top: 20px;
+    margin-top: 1.25rem;
     text-align: center;
-    font-size: 30px;
+    font-size: 1.875rem;
 }
 
 .modal-agregar {
-    margin-top: 20px;
+    margin-top: 1.25rem;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
 .modal-agregar label {
-    margin-bottom: 5px;
+    margin-bottom: 0.3125rem;
 }
 
 .modal-agregar-caja {
     width: 50%;
-    padding: 1px;
-    border: 2px solid #2D3748;
-    border-radius: 2px;
+    padding: 0.0625rem;
+    border: 0.125rem solid #2D3748;
+    border-radius: 0.125rem;
 }
 
 .modal-botones-div {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 1.25rem;
+    margin-bottom: 1.25rem;
 }
 
 .modal-botones {
-    width: 90px;
-    border: 2px solid #2D3748;
+    width: 5.625rem;
+    border: 0.125rem solid #2D3748;
     border-color: #2D3748;
     background-color: #f2f2f2;
-    padding: 4px;
-    margin: 0 10px;
+    padding: 0.25rem;
+    margin: 0 0.625rem;
     text-align: center;
 }
 
@@ -514,18 +403,19 @@ dialog {
     background-color: white;
     padding: 1.5rem;
     border-radius: 0.5rem;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0.25rem 0.375rem rgba(0, 0, 0, 0.1);
 }
 
 .pedidos-table {
     width: 100%;
     border-collapse: collapse;
-    border: 1px solid #d1d5db;
+    border: 0.0625rem solid #d1d5db;
 }
 
 .pedidos-table th,
 .pedidos-table td {
-    border: 1px solid #d1d5db;
+    border-right: 0.0625rem solid #d1d5db;
+    border-bottom: 0.0625rem solid #d1d5db;
     padding: 0.5rem;
     text-align: left;
 }
@@ -535,10 +425,10 @@ dialog {
 }
 
 dialog {
-    border: 2px solid #2D3748;
-    border-radius: 8px;
-    padding: 20px;
-    width: 400px;
+    border: 0.125rem solid #2D3748;
+    border-radius: 0.5rem;
+    padding: 1.25rem;
+    width: 25rem;
 }
 
 .header-modal {
@@ -550,20 +440,20 @@ dialog {
 #mensaje-completar,
 #mensaje-cancelar {
     text-align: center;
-    margin: 20px 0;
+    margin: 1.25rem 0;
     color: #4b5563;
 }
 
 #dialog-error {
-    border: 2px solid #2D3748;
-    border-radius: 8px;
-    padding: 20px;
-    width: 400px;
+    border: 0.125rem solid #2D3748;
+    border-radius: 0.5rem;
+    padding: 1.25rem;
+    width: 25rem;
 }
 
 #mensaje-error {
     text-align: center;
-    margin: 20px 0;
+    margin: 1.25rem 0;
     color: #ef4444;
 }
 
@@ -571,18 +461,18 @@ dialog {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 1.25rem;
+    margin-bottom: 1.25rem;
 }
 
 .modal-botones {
-    width: 90px;
-    border: 2px solid #2D3748;
+    width: 5.625rem;
+    border: 0.125rem solid #2D3748;
     background-color: #f2f2f2;
-    padding: 4px;
-    margin: 0 10px;
+    padding: 0.25rem;
+    margin: 0 0.625rem;
     text-align: center;
-    border-radius: 4px;
+    border-radius: 0.25rem;
     cursor: pointer;
     transition: background-color 0.3s;
 }
@@ -631,9 +521,9 @@ dialog {
 }
 
 .input-search {
-    border: 2px solid #4A5568;
-    min-width: 400px;
-    padding: 5px;
+    border: 0.125rem solid #4A5568;
+    min-width: 25rem;
+    padding: 0.3125rem;
 }
 
 .input-search input {
@@ -643,17 +533,17 @@ dialog {
 }
 
 .tabla-usuarios {
-    max-width: 400px;
+    max-width: 25rem;
     border-collapse: collapse;
-    margin-top: 20px;
+    margin-top: 1.25rem;
 }
 
 .tabla-usuarios table, th, td {
-    border: 2px solid #4A5568;
+    border: 0.125rem solid #4A5568;
 }
 
 .tabla-usuarios, td {
-    padding: 10px;
+    padding: 0.625rem;
     text-align: left;
 }
 
@@ -663,9 +553,14 @@ dialog {
 
 /* Registro */
 .container-registro {
-    max-width: 600px;
+    max-width: 37.5rem;
     margin: 0 auto;
     align-items: center;
+}
+
+.titulo-registro {
+    margin-top: 0.3125rem;
+    margin-bottom: 0.9375rem;
 }
 
 .card-body-registro {
@@ -675,9 +570,9 @@ dialog {
 }
 
 .input-search-registro {
-    border: 2px solid #4A5568;
-    min-width: 600px;
-    padding: 5px;
+    border: 0.125rem solid #4A5568;
+    min-width: 37.5rem;
+    padding: 0.3125rem;
 }
 
 .input-search-registro input {
