Mixed Content y Vite

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,10 @@
 // Bootstrap
 @import 'bootstrap/scss/bootstrap';
 
-@import 'resources/css/app.css';
+// Tailwind
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-@import 'public/css/styles.css';
+// Estilos personalizados
+@import '../css/estilos.css';
