--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -580,3 +580,16 @@ dialog {
     border: none;
     outline: none;
 }
+
+.btn-detalles {
+    color: #1e3a8a;
+    background: none;
+    border: none;
+    cursor: pointer;
+    transition: color 0.3s;
+    padding: 0.25rem 0.5rem;
+}
+
+.btn-detalles:hover {
+    color: #1e40af;
+}
